--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ footer a:hover {
 /* FOOTER
 ------------------------------------*/
 footer {
+    padding-top: 1%;
     background: #222;
     color: #d3d4d6;
 }
