--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,9 @@ footer a:hover {
 .home .content-wrapper {
     flex: 1 0 auto;
 }
+p {
+    padding: 1%;
+}
 .content-bg {
     background: rgb(255 255 255 / 0.9);
     padding: 30px;
@@ -116,6 +119,7 @@ footer a:hover {
 ------------------------------------*/
 footer {
     display: inline-block;
+    height: 50px;
     padding-top: 3%;
     vertical-align: middle;
     background: #222;
